--- a/package.xml
+++ b/package.xml
@@ -56,6 +56,8 @@
   <build_depend>pcl_msgs</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>message_filters</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>PCL</build_export_depend>
@@ -63,6 +65,8 @@
   <build_export_depend>pcl_msgs</build_export_depend>
   <build_export_depend>pcl_ros</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
+  <build_export_depend>message_generation</build_export_depend>
+  <build_export_depend>message_filters</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>PCL</exec_depend>
@@ -70,6 +74,8 @@
   <exec_depend>pcl_msgs</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>message_generation</exec_depend>
+  <exec_depend>message_filters</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
